--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap';
 @import './styles/reset.css';
 
 :root {
   --clr-gradient: linear-gradient(163.95deg, #6348fe 4.74%, #610595 88.83%);
-  --clr-violet: hsl(278, 68%, 11%);
-  --clr-light-grayish-violet: hsl(270, 3%, 87%);
-  --clr-dark-grayish-violet: hsl(279, 6%, 55%);
-  --clr-very-dark-violet: hsl(278, 68%, 11%);
-  --clr-white: hsl(0, 0%, 100%);
-  --clr-red: hsl(0, 100%, 66%);
+  --clr-violet: hsl(278deg 68% 11%);
+  --clr-light-grayish-violet: hsl(270deg 3% 87%);
+  --clr-dark-grayish-violet: hsl(279deg 6% 55%);
+  --clr-very-dark-violet: hsl(278deg 68% 11%);
+  --clr-white: hsl(0deg 0% 100%);
+  --clr-red: hsl(0deg 100% 66%);
   --fs-bd-xs: 0.9rem;
   --lh-bd-xs: 1.1rem;
   --ls-bd-xs: 0.128rem;
@@ -22,7 +22,7 @@
   --ls-hd-lg: 0.22rem;
   --fs-hd-xl: 2.8rem;
   --lh-hd-xl: 3.6rem;
-  --ls-hd-xl: 0.342222rem;
+  --ls-hd-xl: 0.3422rem;
 }
 
 *,
@@ -40,7 +40,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  min-width: 37.5rem;
+  max-width: 100%;
   min-height: 100vh;
   margin: 0;
   padding: 0;
@@ -51,14 +52,19 @@ body {
 }
 
 .app-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* display: flex; */
+
+  /* flex-direction: column; */
+
+  /* align-items: center; */
+
+  /* justify-content: center; */
   width: 100%;
   min-height: 100vh;
-  margin: 0;
-  padding: 0;
+
+  /* margin: 0; */
+
+  /* padding: 0; */
 }
 
 header {
@@ -67,51 +73,65 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   /* width: 100%; */
+
   /* min-height: 100vh; */
   margin: 0;
   padding: 0;
+
   /* padding: 3.2rem 1.6rem; */
+
   /* background-color: var(--clr-very-dark-violet); */
   background-image: url('./assets/bg-main-mobile.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   width: 100%;
-  /* height: 24rem; */
-  /* border: 1px solid red; */
+  height: 24rem;
+
+  /* border: 2px solid red; */
+
   /* padding-inline: 2.4rem; */
 }
+
 .card-wrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  position: relative;
-  width: 100%;
+  position: absolute;
+  width: 90%;
+
   /* height: 100%; */
-  /* border: 1px solid orange; */
+
+  /* border: 2px solid orange; */
   color: var(--clr-white);
-  /* top: 3.2rem; */
+  top: 3.2rem;
 }
 
 .card-back {
   position: relative;
+
   /* position: absolute;
   background-image: url('./assets/bg-card-back.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center; */
+  flex-direction: column;
   display: flex;
   align-items: center;
   justify-content: center;
   align-self: flex-end;
+
   /* width: 85%; */
   width: 28.6rem;
+
   /* height: 100%; */
   height: 15.7rem;
   z-index: 1;
-  /* border: 1px solid yellow; */
+
+  /* border: 2px solid yellow; */
 }
 
 .card-back::before {
@@ -121,14 +141,16 @@ header {
   background-size: contain;
   background-position: center;
   content: '';
+
   /* display: flex;
   align-items: center;
   justify-content: flex-end;
-  align-self: flex-end;*/
+  align-self: flex-end; */
   width: 100%;
   height: 100%;
   z-index: -1;
-  /* border: 1px solid yellow; */
+
+  /* border: 2px solid yellow; */
 }
 
 .card-back--card-sec {
@@ -140,6 +162,7 @@ header {
 
 .card-front {
   position: relative;
+
   /* position: absolute;
   background-image: url('./assets/bg-card-front.png');
   background-repeat: no-repeat;
@@ -149,18 +172,24 @@ header {
   align-items: flex-start;
   justify-content: center;
   align-self: flex-start;
+
   /* width: 85%; */
   width: 28.6rem;
+
   /* height: 100%; */
   height: 15.7rem;
   z-index: 2;
+
   /* flex-wrap: wrap; */
   flex-direction: column;
   row-gap: 2.6rem;
+
   /* padding: 2.8rem 3.2rem; */
+
   /* padding: 1.9rem; */
-  /* border: 1px solid blue; */
-  /* top: 9.4rem; */
+
+  /* border: 2px solid blue; */
+  top: -6.8rem;
 }
 
 .card-front::before {
@@ -178,7 +207,8 @@ header {
 .card-front--logo {
   width: 5.4rem;
   height: 3rem;
-  /* border: 1px solid red; */
+
+  /* border: 2px solid red; */
 }
 
 .card-front--card-numbers {
@@ -203,8 +233,8 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   width: 100%;
+
   /* min-height: 100vh;
   flex-grow: 1; */
   padding: 4.8rem 2.4rem;
@@ -217,7 +247,8 @@ form {
   justify-content: center;
   width: 100%;
   row-gap: 2rem;
-  /* border: 1px solid orange; */
+
+  /* border: 2px solid orange; */
 }
 
 label {
@@ -232,8 +263,8 @@ input {
   display: flex;
   padding: 1.2rem 1.6rem;
   width: 100%;
-  background: #ffffff;
-  border: 1px solid #dfdee0;
+  background: #fff;
+  border: 2px solid #dfdee0;
   border-radius: 8px;
   font-size: var(--fs-hd-lg);
   line-height: var(--lh-hd-lg);
@@ -250,7 +281,8 @@ input::placeholder {
   align-items: center;
   justify-content: center;
   width: 100%;
-  /* border: 1px solid blue; */
+
+  /* border: 2px solid blue; */
 }
 
 button {
@@ -271,8 +303,10 @@ button {
   align-items: center;
   justify-content: center;
   width: 100%;
+
   /* height: 100%; */
-  /* border: 1px solid red; */
+
+  /* border: 2px solid red; */
   row-gap: 0.9rem;
 }
 
@@ -281,8 +315,10 @@ button {
   align-items: center;
   justify-content: center;
   width: 100%;
+
   /* height: 100%; */
-  /* border: 1px solid red; */
+
+  /* border: 2px solid red; */
   column-gap: 0.8rem;
 }
 
